--- a/Frontend/YemekWebUI/YemekWebUI.csproj
+++ b/Frontend/YemekWebUI/YemekWebUI.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Presentation\WebApi\WebApi.csproj" />
+    <ProjectReference Include="..\YemekUygulamasıDto\YemekUygulamasıDto.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\recipes\" />
+  </ItemGroup>
+
 </Project>
