--- a/Frontend/YemekWebUI/YemekWebUI.csproj
+++ b/Frontend/YemekWebUI/YemekWebUI.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Application\Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
     <ProjectReference Include="..\..\Presentation\WebApi\WebApi.csproj" />
     <ProjectReference Include="..\YemekUygulamasıDto\YemekUygulamasıDto.csproj" />
   </ItemGroup>
