--- a/Frontend/YemekWebUI/YemekWebUI.csproj
+++ b/Frontend/YemekWebUI/YemekWebUI.csproj
@@ -8,13 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Application\Application.csproj" />
-    <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
-    <ProjectReference Include="..\..\Presentation\WebApi\WebApi.csproj" />
     <ProjectReference Include="..\YemekUygulamasıDto\YemekUygulamasıDto.csproj" />
   </ItemGroup>
 
