--- a/Frontend/YemekWebUI/appsettings.json
+++ b/Frontend/YemekWebUI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  //"ApiBaseUrl": "http://www.YEMEKAPI.somee.com"
+  "ApiBaseUrl": "https://localhost:7092"
 }
